View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024138 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-09-02 10:17 | 2013-12-19 13:57 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024138: Exception during projection of the point on the face | ||||
Description | Exception during projection of the point on the face with OCCT built in Debug mode. The problem has been detected in the test case blend bfuseblend A7. | ||||
Steps To Reproduce | 1. whole case: test blend bfuseblend A7 2. sub-case: ellipse w 0 0 0 10 5 mkedge w w wire w w mkplane w w prism s w 2 0 30 explode s f copy s_1 f point p 0.753071156928785 4.98580193823337 0 don f p projponf f p -t | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_(013) bug24138 | ||||
|
Branch CR24138 is ready for reviewing and testing |
|
Branch CR24138 has been reviewed and is ready for testing |
|
Dear BugMaster, Branch CR24138 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 50b57e08f3b8d3f92a04f40401d7ecc11ccc72cc Number of compiler warnings: occt component : Linux: 781 (783 on master) Windows: 386 (386 on master) products component : Linux: 189 (191 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: http://occt-tests/CR24138-master-occt/Windows-32-VC9/bugs/moddata_3/bug24138.html http://occt-tests/CR24138-master-occt/Debian60-64/bugs/moddata_3/bug24138.html bugs moddata_(013) bug24138: OK Not needed Testing on Linux: Total MEMORY difference: 363619568 / 363595544 Total CPU difference: 43273.38000000039 / 42424.8100000011 Testing on Windows: Total MEMORY difference: 426802036 / 429676760 Total CPU difference: 39540.859375 / 31262.453125 There are not differences in images found by testdiff. |
occt: master aabe3a17 2013-09-05 09:16:47
Committer: bugmaster Details Diff |
0024138: Exception during projection of the point on the face 1. Correction of algorithm of projection of point on surface of extrusion in order to avoid generation of wrong solutions. 2. Adding test case for issue CR24138 |
Affected Issues 0024138 |
|
mod - src/Extrema/Extrema_ExtPExtS.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug24138 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-09-02 10:17 |
|
New Issue | |
2013-09-02 10:17 |
|
Assigned To | => ifv |
2013-09-03 15:07 |
|
Note Added: 0025439 | |
2013-09-03 15:07 |
|
Status | new => resolved |
2013-09-03 15:08 |
|
Note Added: 0025440 | |
2013-09-03 15:08 |
|
Status | resolved => reviewed |
2013-09-03 16:24 |
|
Assigned To | ifv => mkv |
2013-09-04 16:48 |
|
Note Added: 0025452 | |
2013-09-04 16:49 |
|
Test case number | => bugs moddata_(013) bug24138 |
2013-09-04 16:49 |
|
Assigned To | mkv => bugmaster |
2013-09-04 16:49 |
|
Status | reviewed => tested |
2013-09-04 17:20 | bugmaster | Target Version | => 6.7.0 |
2013-09-06 14:36 | bugmaster | Changeset attached | => occt master aabe3a17 |
2013-09-06 14:36 | bugmaster | Status | tested => verified |
2013-09-06 14:36 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |