0024138: Exception during projection of the point on the face Adding test case for issue CR24138